restored original content for reference

--- a/update/staging/xapian/settings.conf
+++ b/update/staging/xapian/settings.conf
@@ -1,7 +1,153 @@
 # The settings.conf file is now created by:
-staging/steps/build_xapian_db.pl --release [RELEASE]
+# staging/steps/build_xapian_db.pl --release [RELEASE]
+#
+# And, after running that script, can be found at:
+# /usr/local/wormbase/tmp/staging/RELEASE/acedmp/settings.conf
+#
+# PLEASE MAKE EDITS TO
+# website-admin/lib/WormBase/Update/Staging/BuildXapianDB.pm
 
-# And can be found at
-/usr/local/wormbase/tmp/staging/RELEASE/acedmp/settings.conf
+acedump = "/usr/local/wormbase/tmp/staging/acedmp";
+search = "/usr/local/wormbase/databases";
+
+classes = (   { filename = "Paper.ace";
+                desc = ("author", "title", "journal", "page", "volume"); 
+                after = "LongText.ace"; }, 
+              { filename = "Gene.ace";
+                desc = ("concise_description"); },
+              { filename = "Variation.ace";
+                desc = ("status", "gene", "remark"); },
+              { filename = "Anatomy_term.ace";},
+              { filename = "Antibody.ace";
+                desc = ("gene", "remark"); },
+              { filename = "Clone.ace"; },
+              { filename = "Expression_cluster.ace"; 
+                desc = ("description", "remark", "algorithm"); },
+              { filename = "Expr_pattern.ace"; },
+              { filename = "Expr_profile.ace"; },
+              { filename = "Feature.ace"; },
+              { filename = "Gene_cluster.ace";
+                desc = ("description", "gene"); },
+              { filename = "Gene_regulation.ace"; },
+              { filename = "GO_term.ace"; },
+              { filename = "Homology_group.ace"; },
+              { filename = "Interaction.ace";
+                desc = ("interactor", "remark"); },
+              { filename = "Life_stage.ace"; },
+              { filename = "Microarray_results.ace";
+                desc = ("gene", "cds", "remark"); },
+              { filename = "Molecule.ace"; },
+              { filename = "Operon.ace"; 
+                desc = ("gene", "remark", "description"); },
+              { filename = "Position_matrix.ace"; },
+              { filename = "PCR.ace"; },
+              { filename = "Oligo.ace"; },
+              { filename = "Oligo_set.ace"; },
+              { filename = "Phenotype.ace"; },
+              { filename = "Protein.ace"; 
+                desc = ("corresponding_cds", "remark", "description"); },
+              { filename = "Rearrangement.ace"; 
+                desc = ("mutagen", "remark"); },
+              { filename = "RNAi.ace"; },
+              { filename = "Sequence.ace"; },
+              { filename = "Strain.ace"; 
+                desc = ("genotype", "remark"); },
+              { filename = "Structure_data.ace"; },
+              { filename = "Transgene.ace"; },
+              { filename = "Transcript.ace"; },
+              { filename = "Analysis.ace"; 
+                desc = ("title", "description"); },
+              { filename = "Gene_class.ace"; },
+              { filename = "Laboratory.ace"; 
+                desc = ("representative", "mail", "remark"); },
+              { filename = "Motif.ace"; },
+              { filename = "Person.ace"; 
+                desc = ("institution"); },
+              { filename = "Disease.ace"; 
+                desc = ("description", "gene", "hsgene", "synonym"); },
+              { filename = "Widgets.ace"; 
+                desc = ("widget_title", "editor", "wbid", "widget_order", "type"); },
+              { filename = "Pages.ace"; 
+                desc = ("description"); }        
+
+          );
+
+species = ( { name = "c_elegans";
+              id = 6239; },
+            { name = "c_angaria";
+              id = 96668; },
+            { name = "c_brenneri";
+              id = 135651; },
+            { name = "c_briggsae";
+              id = 6238; },
+            { name = "c_japonica";
+              id = 281687; },
+            { name = "c_remanei";
+              id = 31234; },
+            { name = "p_pacificus";
+              id = 54126; },
+            { name = "a_sum";
+              id = 6253; },
+            { name = "b_malayi";
+              id = 6279; },
+            { name = "c_drosophilae";
+              id = 96641; },
+            { name = "g_pallida";
+              id = 36090; },
+            { name = "h_bacteriophora";
+              id = 37862; },
+            { name = "h_contortus";
+              id = 6289; },
+            { name = "m_hapla";
+              id = 6305; },
+            { name = "m_incognita";
+              id = 6306; },
+            { name = "n_brasiliensis";
+              id = 36090; },
+            { name = "o_volvulus";
+              id = 6282; },
+            { name = "s_ransomi";
+              id = 554534; },
+            { name = "s_ratti";
+              id = 34506; },
+            { name = "t_circumcincta";
+              id = 45464; },
+            { name = "c_sp11";
+              id = 886184; },
+            { name = "t_muris";
+              id = 70415; },
+            { name = "t_spiralis";
+              id = 6334; }
+); 
+
+
+
+paper_types = (
+  "journal_article", 
+  "review", 
+  "comment", 
+  "news", 
+  "letter", 
+  "editorial", 
+  "congresses", 
+  "historical_article", 
+  "biography", 
+  "interview", 
+  "lectures", 
+  "interactive_tutorial", 
+  "retracted_publication", 
+  "technical_report", 
+  "directory", 
+  "monograph", 
+  "published_erratum", 
+  "meeting_abstract", 
+  "gazette_article", 
+  "book_chapter", 
+  "book", 
+  "email", 
+  "wormBook", 
+  "other"
+);
+
 
 
