--- a/log4perl/production.conf
+++ b/log4perl/production.conf
@@ -8,6 +8,13 @@ log4perl.appender.logfile.mode=append
 log4perl.appender.logfile.layout=PatternLayout
 log4perl.appender.logfile.layout.ConversionPattern=[%d] [WB] [%p] %m%n
 
+# Log AQL/WQL queries
+log4perl.logger.WormBase.Web.Controller.Tools.Queries  = INFO, querylog
+log4perl.appender.querylog          = Log::Log4perl::Appender::File
+log4perl.appender.querylog.filename = sub { my $hostname = `hostname`; chomp $hostname ; return "/usr/local/wormbase/logs/webapp/queries.log" };
+log4perl.appender.querylog.layout   = Log::Log4perl::Layout::PatternLayout
+log4perl.appender.querylog.layout.ConversionPattern=[%d] [WB] [%p] %m%n
+
 # Controller errors - let's only look for warnings
 #log4perl.logger.wormBase.web.Controller=WARN
 
