--- a/log4perl/staging.conf
+++ b/log4perl/staging.conf
@@ -3,7 +3,9 @@
 # The root logger has a very low threshold for development
 log4perl.rootlogger=DEBUG, logfile
 log4perl.appender.logfile=Log::Log4perl::Appender::File
-log4perl.appender.logfile.filename= sub { my $hostname = `hostname`; chomp $hostname ; return "logs/$hostname-catalyst.log" };
+# Add hostname if logging to a shared location on a cluster.
+#log4perl.appender.logfile.filename= sub { my $hostname = `hostname`; chomp $hostname ; return "logs/$hostname-catalyst.log" };
+log4perl.appender.logfile.filename= sub { return "logs/catalyst.log" };
 log4perl.appender.logfile.mode=append
 log4perl.appender.logfile.layout=PatternLayout
 log4perl.appender.logfile.layout.ConversionPattern=[%d] [WB] [%p] %m%n
@@ -15,6 +17,14 @@ log4perl.appender.cache.filename=logs/cache.log
 log4perl.appender.cache.mode=append
 log4perl.appender.cache.layout=PatternLayout
 log4perl.appender.cache.layout.ConversionPattern=[%d] [%p] %m%n
+
+# Log AQL/WQL queries
+log4perl.logger.WormBase.Web.Controller.Tools.Queries  = INFO, querylog
+log4perl.appender.querylog          = Log::Log4perl::Appender::File
+log4perl.appender.querylog.filename = sub { my $hostname = `hostname`; chomp $hostname ; return "logs/queries.log" };
+log4perl.appender.querylog.layout   = Log::Log4perl::Layout::PatternLayout
+log4perl.appender.querylog.layout.ConversionPattern=[%d] [WB] [%p] %m%n
+
 
 # Controller errors - let's only look for warnings
 #log4perl.logger.wormBase.web.Controller=WARN
