--- a/log4perl/production.conf
+++ b/log4perl/production.conf
@@ -3,6 +3,7 @@
 # The root logger has a very low threshold for development
 log4perl.rootlogger=FATAL, logfile
 log4perl.appender.logfile=Log::Log4perl::Appender::File
+log4perl.appender.logfile.filename= sub { my $hostname = `hostname`; chomp $hostname ; return "/usr/local/wormbase/logs/webapp/$hostname-access.log" };
 log4perl.appender.logfile.filename=/usr/local/wormbase/logs/webapp/access.log
 log4perl.appender.logfile.mode=append
 log4perl.appender.logfile.layout=PatternLayout
@@ -11,7 +12,7 @@ log4perl.appender.logfile.layout.ConversionPattern=[%d] [WB] [%p] %m%n
 # Log AQL/WQL queries
 log4perl.logger.WormBase.Web.Controller.Tools.Queries  = INFO, querylog
 log4perl.appender.querylog          = Log::Log4perl::Appender::File
-log4perl.appender.querylog.filename = sub { my $hostname = `hostname`; chomp $hostname ; return "/usr/local/wormbase/logs/webapp/queries.log" };
+log4perl.appender.querylog.filename = sub { my $hostname = `hostname`; chomp $hostname ; return "/usr/local/wormbase/logs/webapp/$hostname-queries.log" };
 log4perl.appender.querylog.layout   = Log::Log4perl::Layout::PatternLayout
 log4perl.appender.querylog.layout.ConversionPattern=[%d] [WB] [%p] %m%n
 
