Add WBProcess to xapian indexing

--- a/update/staging/xapian/settings.conf
+++ b/update/staging/xapian/settings.conf
@@ -68,6 +68,7 @@ classes = (   { filename = "Paper.ace";
                 desc = ("description", "gene", "hsgene", "synonym"); },
               { filename = "Widgets.ace"; 
                 desc = ("widget_title", "editor", "wbid", "widget_order", "type"); },
+              { filename = "WBProcess.ace"; },
               { filename = "Pages.ace"; 
                 desc = ("description"); }        
 
