--- a/update/staging/xapian/settings.conf
+++ b/update/staging/xapian/settings.conf
@@ -136,7 +136,10 @@ species = ( { name = "c_elegans";
               id = 70415; },
             { name = "t_spiralis";
               id = 6334; 
-              gff3 = 1;}
+              gff3 = 1;},
+            { nmae = "l_loa";
+              id = 7209;
+              gff3 = 1; }
 ); 
 
 
