Add Transposon to search db * from issue #689

--- a/update/staging/xapian/settings.conf
+++ b/update/staging/xapian/settings.conf
@@ -55,6 +55,7 @@ classes = (   { filename = "Paper.ace";
                 desc = ("genotype", "remark"); },
               { filename = "Structure_data.ace"; },
               { filename = "Transgene.ace"; },
+              { filename = "Transposon.ace"; },
               { filename = "Transcript.ace"; },
               { filename = "Analysis.ace"; 
                 desc = ("title", "description"); },
