Xapian search update * Add DO_term class for indexing * remove Other_name as label (Transposon)

--- a/update/staging/xapian/settings.conf
+++ b/update/staging/xapian/settings.conf
@@ -22,6 +22,7 @@ classes = (   { filename = "Paper.ace";
                 desc = ("gene", "remark"); },
               { filename = "Clone.ace"; },
               { filename = "CDS.ace"; },
+              { filename = "DO_term.ace"; },
               { filename = "Expression_cluster.ace"; 
                 desc = ("description", "remark", "algorithm"); },
               { filename = "Expr_pattern.ace"; },
