updated proxy config for relocated services

--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -2,10 +2,10 @@ user daemon;
 worker_processes  5;
 daemon on;
 
-# EC2 - elastic IPs -> Private IPs
-# 50.19.229.229 (core 1)   10.114.113.44   
-# 23.23.228.211 (core 2)   10.38.33.11
-# 23.21.171.141 (couch)    10.224.113.14
+# EC2 - elastic IPs -> Private IPs (CHANGE EVERY TIME ELASTIC IP IS REASSOCIATED)
+# 50.19.229.229 (core 1) 
+# 23.23.228.211 (core 2) 
+# 23.21.171.141 (couch)  
 
 
 # Error log; other directives: notice | info
@@ -96,22 +96,10 @@ http {
     # A pool of hosts running starman, driving www.
     upstream wormbase  {
        # Amazon instance - eleastic IP of 50.19.229.229
-       server 10.114.113.44:5000   weight=10 max_fails=2000 fail_timeout=1m;
+       server 10.98.131.95:5000   weight=10 max_fails=2000 fail_timeout=1m;
        
        # Amazon 2nd instance
-       server 10.38.33.11:5000     weight=10 max_fails=2000 fail_timeout=1m;
-
-       # web1
-#       server 206.108.125.175:5000 weight=10 max_fails=2000 fail_timeout=2m;
-
-       # web2
-#       server 206.108.125.177:5000 weight=10 max_fails=2000 fail_timeout=2m;
-
-       # web3
-#       server 206.108.125.190:5000 weight=10 max_fails=2000 fail_timeout=2m;
-
-       # web4
-#       server 206.108.125.168:5000 weight=10 max_fails=2000 fail_timeout=2m;
+       server 10.80.205.138:5000     weight=10 max_fails=2000 fail_timeout=1m;
     }  
 
     # Data mining specific queries
@@ -125,7 +113,8 @@ http {
     # to adjust location of couchdb in app configuration (wormbase_production.conf)
     upstream couchdb {
         # EC2 couch
-        server 10.224.113.14:5984 weight=10 max_fails=2000 fail_timeout=1m;
+#        server 10.224.113.14:5984 weight=10 max_fails=2000 fail_timeout=1m;
+        server 10.101.22.233:5984 weight=10 max_fails=2000 fail_timeout=1m;
         # Using public elastic IP (which we should NOT be
         # doing as it incurs data transfer charges)
         # server 23.21.171.141:5984 weight=10 max_fails=2000 fail_timeout=1m;
@@ -143,11 +132,9 @@ http {
         server 206.108.125.164:5984 weight=10 max_fails=2000 fail_timeout=1m;
     }
 
-    # Social services like the wiki, blog, and forums are all at OICR.
+    # Social services like the wiki, blog, and forums.
     upstream wormbase-social {
-       # wb-social @ OICR
-       server 206.108.125.176      weight=10 max_fails=2000 fail_timeout=1m; 
-#       server 23.21.171.141      weight=10 max_fails=2000 fail_timeout=1m; 
+       server 23.21.171.141      weight=10 max_fails=2000 fail_timeout=1m; 
     }
 
     upstream wormbase-gbrowse {
@@ -158,27 +145,52 @@ http {
         server 206.108.125.173      weight=10 max_fails=2000 fail_timeout=1m; 
     }
 
+    upstream wormbase-synteny {
+       # EC2
+#        server 50.19.229.229        weight=10 max_fails=2000 fail_timeout=1m;
+
+        # OICR dedicated
+        server 206.108.125.173:8080      weight=10 max_fails=2000 fail_timeout=1m; 
+    }
+
     # The staging machine (new website)
     upstream wormbase-staging {
        # aka wb-web7 @ oicr
-#       server 206.108.125.164:5000 weight=10 max_fails=2000 fail_timeout=1m;
+       server 206.108.125.164:5000 weight=10 max_fails=2000 fail_timeout=1m;
 
        # web1
-       server 206.108.125.175:5000 weight=10 max_fails=2000 fail_timeout=2m;
+#       server 206.108.125.175:5000 weight=10 max_fails=2000 fail_timeout=2m;
 
        # web2
 #       server 206.108.125.177:5000 weight=10 max_fails=2000 fail_timeout=2m;
 
        # web3
-#       server 206.108.125.190:5000 weight=10 max_fails=2000 fail_timeout=2m;
+#      server 206.108.125.190:5000 weight=10 max_fails=2000 fail_timeout=2m;
 
        # web4
 #       server 206.108.125.168:5000 weight=10 max_fails=2000 fail_timeout=2m;
     }
 
+    # The QA/QC website
+    upstream wormbase-qaqc {
+       # web1
+       server 206.108.125.175:5000 weight=10 max_fails=2000 fail_timeout=2m;
+    }
+
+    upstream wormbase-gbrowse-qaqc {
+        # OICR dedicated
+        server 206.108.125.164:8080      weight=10 max_fails=2000 fail_timeout=1m; 
+    }
+
     upstream wormbase-mining-staging {
         # OICR dedicated
         server 206.108.125.164:5000      weight=10 max_fails=2000 fail_timeout=1m; 
+    }
+
+    upstream wormbase-mining-temp {
+        # OICR dedicated
+#        server 206.108.125.164:5000      weight=10 max_fails=2000 fail_timeout=1m; 
+       server 206.108.125.178:5000 weight=10 max_fails=200  fail_timeout=1m;
     }
 
     upstream wormbase-gbrowse-staging {
@@ -193,7 +205,7 @@ http {
 
      map $http_user_agent $is_bot {
          default 0;
-         ~(crawl|Googlebot|Slurp|spider|bingbot|tracker|click|parser|spider)$ 1;
+         ~(crawl|Googlebot|Google|Slurp|spider|bingbot|tracker|click|parser|spider|genie0217)$ 1;
      }
 
 
@@ -260,6 +272,10 @@ http {
       if ($host ~ ^(wormbase.org)) {
       	  #rewrite ^(.*) http://example.com$1 permanent;
           rewrite ^(.*) http://www.wormbase.org$1 permanent;          
+      }
+
+      if ($is_bot) {
+           return 404; # Please respect the robots.txt file !
       }
 
       # Only requests to our Host are allowed
@@ -341,12 +357,12 @@ http {
 
         location /stats/starman/core1 {
             allow all;
-	    proxy_pass http://10.114.113.44:5000/server-status;
+	    proxy_pass http://10.80.130.4:5000/server-status;
         }
 
         location /stats/starman/core2 {
             allow all;
-	    proxy_pass http://10.38.33.11:5000/server-status;
+	    proxy_pass http://10.83.38.136:5000/server-status;
         }
 
 	# Serve static files directly from nginx
@@ -369,9 +385,13 @@ http {
 	    root /usr/local/wormbase/website/production/root/html;
         }
 
-	# We aren't really using this since images
         location /img-static {
             root  /usr/local/wormbase/website-shared-files/html;
+        }
+
+	# One of hack for NCBI Linkout: 10/2012
+        location /images/wdb.gif {
+            root  /usr/local/wormbase/website-shared-files/html/img-static/wdb.gif;
         }
 
         location /docs {
@@ -415,6 +435,19 @@ http {
 	     proxy_pass http://wormbase-gbrowse/gbrowse-static/;
         }
 
+
+	# GBrowse, served by apache on a dedicated node.
+	location /tools/synteny {
+#             proxy_pass http://206.108.125.173/tools/genome
+	     proxy_pass http://wormbase-synteny/tools/synteny;
+        }
+
+	# GBrowse, served by a dedicated host.
+        location /synteny/images/ {
+#             proxy_pass http://206.108.125.173/gbrowse2/;
+	     proxy_pass http://wormbase-gbrowse/synteny/images/;
+        }
+
 	# Send specific queries to wormbase mining
 	location /tools/blast_blat {
              if ($is_bot) {
@@ -427,14 +460,23 @@ http {
              if ($is_bot) {
                 return 403; # Please respect the robots.txt file !
              }
-	     proxy_pass http://wormbase-mining/tools/epic;
+#	     proxy_pass http://wormbase-mining/tools/epic;
+	     proxy_pass http://wormbase-mining-temp/tools/epic;
+        }
+
+	location /tools/tree {
+             if ($is_bot) {
+                return 404; # Please respect the robots.txt file !
+             }
+	     proxy_pass http://wormbase-mining/tools/tree;
         }
 
 	location /tools/gmap {
              if ($is_bot) {
                 return 403; # Please respect the robots.txt file !
              }
-	     proxy_pass http://wormbase-mining/tools/gmap;
+	     proxy_pass http://wormbase-mining-temp/tools/gmap;
+#	     proxy_pass http://wormbase-mining/tools/gmap;
         }
 
 	location /tools/epcr {
@@ -456,7 +498,8 @@ http {
              if ($is_bot) {
                 return 403; # Please respect the robots.txt file !
              }
-	     proxy_pass http://wormbase-mining/media/images/epic;
+#	     proxy_pass http://wormbase-mining/media/images/epic;
+	     proxy_pass http://wormbase-mining-temp/media/images/epic;
 	}
 
 
@@ -469,6 +512,7 @@ http {
    }
 
  # TEMPORARY HACK: Location widgets were precached against beta.wormbase.org
+
    server {
         listen 80;
          server_name beta.wormbase.org;
@@ -497,7 +541,16 @@ http {
         ssl_ciphers  ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
         ssl_prefer_server_ciphers   on;
 
+	location /robots.txt {
+	    root /usr/local/wormbase/website/production/root/html;
+        }
+
         location / {
+             if ($is_bot) {
+                return 403; # Please respect the robots.txt file !
+             }
+
+
               proxy_set_header Host $http_host;
               proxy_set_header X-Forwarded-Host $http_host;
               proxy_set_header X-Real-IP $remote_addr;
@@ -508,10 +561,13 @@ http {
 	      proxy_redirect https://www.wormbase.org:443/ http://www.wormbase.org/;
          }
 
+
 	 # Trap old requests for the genome browser.
         location /db/gb2/gbrowse/ {
 	     rewrite ^/db/gb2/gbrowse/(.*)$ http://www.wormbase.org/tools/genome/gbrowse/$1 permanent;
         }
+
+
 
 
 	# GBrowse, served by apache on a dedicated node.
@@ -531,6 +587,7 @@ http {
 	     proxy_pass http://wormbase-gbrowse/gbrowse2/i/;
         }
 
+
         location /gbrowse-static/ {
 	     proxy_pass http://wormbase-gbrowse/gbrowse-static/;
         }
@@ -547,14 +604,26 @@ http {
              if ($is_bot) {
                 return 403; # Please respect the robots.txt file !
              }
-	     proxy_pass http://wormbase-mining/tools/epic;
+#	     proxy_pass http://wormbase-mining/tools/epic;
+	     proxy_pass http://wormbase-mining-temp/media/images/epic;
+        }
+
+
+	location /tools/tree {
+             if ($is_bot) {
+                return 403; # Please respect the robots.txt file !
+             }
+#	     proxy_pass http://wormbase-mining/tools/epic;
+	     return 404;
+	     proxy_pass http://wormbase-mining-temp/media/images/tree;
         }
 
 	location /tools/gmap {
              if ($is_bot) {
                 return 403; # Please respect the robots.txt file !
              }
-	     proxy_pass http://wormbase-mining/tools/gmap;
+#	     proxy_pass http://wormbase-mining/tools/gmap;
+	     proxy_pass http://wormbase-mining-temp/media/images/gmap;
         }
 
 	location /tools/epcr {
@@ -572,12 +641,6 @@ http {
 	     proxy_pass http://wormbase-mining/media/images/blast_blat;
 	}
 
-	location /media/images/epic {
-             if ($is_bot) {
-                return 403; # Please respect the robots.txt file !
-             }
-	     proxy_pass http://wormbase-mining/media/images/epic;
-	}
 
  	location /tools/queries {
              if ($is_bot) {
@@ -677,17 +740,160 @@ http {
 	location /tools/blast_blat {
 	     proxy_pass http://wormbase-mining-staging/tools/blast_blat;
          }
+
 	location /tools/epic {
+             if ($is_bot) {
+                return 403; # Please respect the robots.txt file !
+             }
 	     proxy_pass http://wormbase-mining-staging/tools/epic;
-         }
+        }
 
 	# And send temporary images generated by those tools to the correct server.
 	location /media/images/blast_blat {
 	     proxy_pass http://wormbase-mining-staging/media/images/blast_blat;
 	}
-	location /media/images/epic {
+
+      	location /media/images/epic {
+             if ($is_bot) {
+                return 403; # Please respect the robots.txt file !
+             }
 	     proxy_pass http://wormbase-mining-staging/media/images/epic;
 	}
+
+
+        location /img-static {
+            root  /usr/local/wormbase/website-shared-files/html;
+        }
+
+	location /_utils {
+	     proxy_pass http://couchdb-staging/_utils;
+        }
+
+
+       # We will NOT serve files directly for staging.
+       # We want to be able to see what is available on the back end.
+       # See configuration for www/beta if necessary.
+
+#      # Force all sessions into https
+#       location / {
+#            rewrite         ^/(.*)$ https://localhost:443/$1 permanent;
+#        }
+   }
+
+
+
+#############################################
+#  staging.wormbase.org
+#      wb-web7: 206.108.125.175:5000
+#############################################
+  server {
+      server_name qaqc.wormbase.org;      
+      listen      80;
+		       
+      access_log /usr/local/wormbase/logs/qaqc/cache_log cache;
+      access_log /usr/local/wormbase/logs/qaqc/access_log main;
+      error_log  /usr/local/wormbase/logs/qaqc/error_log warn;
+
+      include       mime.types;
+      default_type  application/octet-stream;
+
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Forwarded-Host $http_host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Connection Close;
+
+      #############################################
+      #
+      # LOCKDOWN
+      #
+      #############################################      
+
+      # Only requests to our Host are allowed
+      if ($host !~ ^(qaqc.wormbase.org)$ ) {
+         return 444;
+      }
+
+      # Only allow these request methods
+      if ($request_method !~ ^(GET|HEAD|POST|PUT)$ ) {
+         return 444;
+      }
+
+      if ($http_user_agent ~ "Googlebot" ) { 
+         return 403; 
+      } 
+      
+      location /errors/system_maintenance.html {
+          root /usr/local/wormbase/website;
+      }
+
+      # System Maintenance (Service Unavailable)       
+      error_page 502 /errors/system_maintenance.html;
+
+      location / {
+          # Pool of PSGI/Starman hosts
+	  proxy_pass http://wormbase-qaqc;
+
+          # Caching diretives
+#         proxy_cache_bypass $cookie___ac;
+#         proxy_cache thecache;
+#         proxy_cache_key $scheme$proxy_host$request_uri;
+       }
+
+
+	# GBrowse, served by apache on a dedicated node.
+	location /tools/genome {
+#             proxy_pass http://206.108.125.173/tools/genome;
+	     proxy_pass http://wormbase-gbrowse-qaqc/tools/genome;
+        }
+
+	location /robots.txt {
+	    root /usr/local/wormbase/website/production/root/html;
+        }
+
+	# GBrowse, served by a dedicated host.
+        location /gbrowse2 {
+#             proxy_pass http://206.108.125.173/gbrowse2/;
+	     proxy_pass http://wormbase-gbrowse-qaqc/gbrowse2/;
+        }
+
+        location /gbrowse2/i/ {
+#             proxy_pass http://206.108.125.173/gbrowse2/i/;
+	     proxy_pass http://wormbase-gbrowse-qaqc/gbrowse2/i/;
+        }
+
+        location /gbrowse-static/ {
+	     proxy_pass http://wormbase-gbrowse-qaqc/gbrowse-static/;
+        }
+
+	# Send specific queries to wormbase mining
+	location /tools/blast_blat {
+	     proxy_pass http://wormbase-mining-staging/tools/blast_blat;
+         }
+
+	location /tools/epic {
+             if ($is_bot) {
+                return 403; # Please respect the robots.txt file !
+             }
+	     proxy_pass http://wormbase-mining-staging/tools/epic;
+        }
+
+	# And send temporary images generated by those tools to the correct server.
+	location /media/images/blast_blat {
+	     proxy_pass http://wormbase-mining-staging/media/images/blast_blat;
+	}
+
+      	location /media/images/epic {
+             if ($is_bot) {
+                return 403; # Please respect the robots.txt file !
+             }
+	     proxy_pass http://wormbase-mining-staging/media/images/epic;
+	}
+
+
+        location /img-static {
+            root  /usr/local/wormbase/website-shared-files/html;
+        }
 
 	location /_utils {
 	     proxy_pass http://couchdb-staging/_utils;
@@ -725,8 +931,8 @@ http {
   ##################################
   #
   #  blog.wormbase.org
-  #     206.108.125.176
-  # 
+  #     OICR: 206.108.125.176 (using wormbase-social)
+  #     EC2: 23.21.171.141
   ##################################
   server {
        listen 80;
@@ -744,8 +950,8 @@ http {
   ##################################
   #
   #  forums.wormbase.org
-  #     206.108.125.176
-  # 
+  #     OICR: 206.108.125.176 (using wormbase-social)
+  #     EC2: 23.21.171.141
   ##################################
   server {
        listen 80;
@@ -762,8 +968,8 @@ http {
   ##################################
   #
   #  wiki.wormbase.org
-  #     206.108.125.176
-  # 
+  #     OICR: 206.108.125.176 (using wormbase-social)
+  #     EC2: 23.21.171.141
   ##################################
   server {
        listen 80;
@@ -773,7 +979,6 @@ http {
        access_log /usr/local/wormbase/logs/wiki/access_log main;
        error_log  /usr/local/wormbase/logs/wiki/error_log warn;
        location / {
-#	    proxy_pass http://206.108.125.176/;
 	    proxy_pass http://wormbase-social;
         }
   }
@@ -814,7 +1019,6 @@ http {
       }
 
       location / {
-                return 403; # Please respect the robots.txt file !
           if ($is_bot) {
                 return 403; # Please respect the robots.txt file !
           }
@@ -922,6 +1126,9 @@ server {
           deny all;
       }
 
+      if ($is_bot) {
+           return 403; # Please respect the robots.txt file !
+      }
 
       #############################################
       #
@@ -948,6 +1155,16 @@ server {
        		proxy_pass http://206.108.125.173:8000/tools/genome;
 	}
 
+	location /tools/tree {
+             if ($is_bot) {
+                return 404; # Please respect the robots.txt file !
+             }
+	     return 404;
+#	     proxy_pass http://wormbase-mining/tools/epic;
+#	     proxy_pass http://wormbase-mining-temp/tools/tree;
+        }
+
+
 	location /gbrowse2 {
 	     proxy_pass http://206.108.125.173:8000/gbrowse2/;
 	}
@@ -955,6 +1172,7 @@ server {
 	location /gbrowse2/i/ {
 	     proxy_pass http://206.108.125.173:8000/tools/gbrowse2/i/;
 	}
+
     }
 
 
@@ -982,6 +1200,10 @@ server {
 
       include       mime.types;
       default_type  application/octet-stream;
+
+      if ($is_bot) {
+           return 403; # Please respect the robots.txt file !
+      }
 
       #############################################
       #
@@ -1014,6 +1236,15 @@ server {
        		proxy_pass http://206.108.125.173:8000/tools/genome;
 	}
 
+	location /tools/tree {
+             if ($is_bot) {
+                return 404; # Please respect the robots.txt file !
+             }
+#	     proxy_pass http://wormbase-mining/tools/epic;
+	     return 404;
+	     proxy_pass http://wormbase-mining-temp/tools/tree;
+        }
+
 	location /gbrowse2 {
 	     proxy_pass http://206.108.125.173:8000/gbrowse2/;
 	}
@@ -1021,6 +1252,7 @@ server {
 	location /gbrowse2/i/ {
 	     proxy_pass http://206.108.125.173:8000/tools/gbrowse2/i/;
 	}
+
     }
 
 
