mothly rotation is sufficient for this

--- a/crons/wormbase-logrotate.conf
+++ b/crons/wormbase-logrotate.conf
@@ -1,11 +1,12 @@
 /usr/local/wormbase/logs/*_log {
-        daily
+        monthly
         missingok
         rotate 3650
         compress
         notifempty
         sharedscripts
+	dateext
         postrotate
-                /usr/local/apache2/bin/apachectl graceful
+                /usr/sbin/apachectl graceful
         endscript
 }
