--- a/update/staging/xapian/settings.conf
+++ b/update/staging/xapian/settings.conf
@@ -115,6 +115,9 @@ species = ( { name = "c_elegans";
             { name = "h_contortus";
               id = 6289;
               gff3 = 1;},
+            { name = "l_loa";
+              id = 7209; 
+              gff3 = 1;},
             { name = "m_hapla";
               id = 6305; 
               gff3 = 1;},
