--- a/nginx/development/nginx.conf
+++ b/nginx/development/nginx.conf
@@ -145,6 +145,55 @@ server {
 
        location / {
 
+
+       if ($request_method = 'OPTIONS') {
+ 
+        add_header 'Access-Control-Allow-Origin' '*';
+        
+        #
+        # Om nom nom cookies
+        #
+ 
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        
+        #
+        # Custom headers and headers various browsers *should* be OK with but aren't
+        #
+ 
+        add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+        
+        #
+        # Tell client that this pre-flight info is valid for 20 days
+        #
+ 
+        add_header 'Access-Control-Max-Age' 1728000;
+        add_header 'Content-Type' 'text/plain charset=UTF-8';
+        add_header 'Content-Length' 0;
+ 
+        return 204;
+     }
+ 
+     if ($request_method = 'POST') {
+ 
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+ 
+     }
+ 
+     if ($request_method = 'GET') {
+ 
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+ 
+     }
+
+     
+
             ########################################
             #  Pool of fastcgi sockets
             ######################################## 
@@ -166,7 +215,7 @@ server {
             # proxy_set_header X-Forwarded-Port 443; #this is important for Catalyst Apps!
            
 	    # Proxy pass to a single server for testing:
-	    proxy_pass http://localhost:8000;
+	    proxy_pass http://localhost:9002;
 
 #           proxy_redirect   off;
    	    client_max_body_size            0;
@@ -190,7 +239,8 @@ server {
         }
 
         location /static {
-            root  /usr/local/wormbase/website/development/root;
+            #root  /usr/local/wormbase/website/development/root;
+            root  /usr/local/wormbase/website/acabunoc/root;
         }
     }
 
